--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>gerador de senha</title>
 </head>
 <body>
+    <img src="" alt="" srcset="cadeado fechado">
+    <h2 class="titulo-principal">gerador de senha</h2>
+    <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatoria e segura</h3>
   <h1>vai ter um texto aqui </h1>  
 </body>
 </html>
