--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>gerador de senha</title>
 </head>
 <body>
-    <img src="" alt="" srcset="cadeado fechado">
+    <img src=""C:\Users\User\Downloads\kkkkkkkkkkkkkkkkkkk.jpg"" alt="" srcset="cadeado fechado">
     <h2 class="titulo-principal">gerador de senha</h2>
     <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatoria e segura</h3>
   <h1>vai ter um texto aqui </h1>  
